CQRS better prep + openapi update+ ex handler better
